Добавление userID в компоненты task Описание нового GET запроса
